# starhash

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
docs/: index.md
license/: index.html
paper/data/: README.md
search/: search_index.json
src/starhash/: core.py
src/starhash/data/: astronames_boost.txt  combolist.txt  eff_largewordlist.txt
tests/: test_roundtrip.py
