[project]
name = "starhash"
version = "1.0.2"
description = "Generate unique, memorable, and deterministic names for astronomical objects."
authors = [
    { name = "Tom Killestein", email = "tom.killestein@gmail.com" }
]
maintainers = [
    { name = "Tom Killestein", email = "tom.killestein@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICEN[CS]E"]
requires-python = ">=3.11"
keywords = ["astronomy", "coordinates", "healpix", "transients"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "ff3>=1.0.2",
    "healpy>=1.17.3",
    "rich-click>=1.9.4",
]

[dependency-groups]
dev = [
    "astropy>=6.0.1",
    "hypothesis>=6.141.1",
    "mkdocs>=1.6.1",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "ruff>=0.14.9",
    "tqdm>=4.67.1",
    "twine>=6.2.0",
    "ty>=0.0.12",
]

[project.urls]
Homepage = "https://github.com/tkillestein/starhash"
Repository = "https://github.com/tkillestein/starhash"
Issues = "https://github.com/tkillestein/starhash/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
starhash = "starhash.core:cli"

[tool.hatchling.build.targets.wheel]
packages = ["src/starhash"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812",
    "D",
    "INP",
    "FBT",
    "PLR0913",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]  # Allow asserts and magic values in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
